# validator-rewards

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  run_tests.sh  rust-toolchain.toml
.github/workflows/: test.yml
.near/: config.json  genesis.json  near.json  node_key.json  shitzu.pool.near.json  validator_key.json
crates/contract/: Cargo.toml
crates/contract-lib/: Cargo.toml
crates/contract-lib/src/: lib.rs  owner.rs  view.rs
crates/contract-migrate/: Cargo.toml
crates/contract-migrate/src/: main.rs
crates/contract-test/: Cargo.toml
crates/contract-test/tests/: contract.rs
crates/contract-test/tests/util/: call.rs  events.rs  mod.rs  view.rs
crates/contract/src/: lib.rs
res/: contract.wasm  contract_abi.json  rewarder.wasm  test_token.wasm  whitelist_stub.wasm
