[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
futures = "0.3"
near-workspaces = { version = "0.10", default-features = false }
primitive-types = { version = "0.12", default-features = false }
owo-colors = "4"
thiserror = "1"
tokio = "1"

[workspace.dependencies.near-contract-standards]
version = "5"

[workspace.dependencies.near-sdk]
version = "5"
default-features = false
features = ["unstable"]

[profile]
[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"

[profile.test.package.'*']
codegen-units = 1
opt-level = 1
