[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
dotenv = "0.15"
futures = "0.3"
near-workspaces = { version = "0.14", default-features = false }
primitive-types = { version = "0.13", default-features = false }
owo-colors = "4"
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = "1"

[workspace.dependencies.near-contract-standards]
version = "5"

[workspace.dependencies.near-sdk]
version = "5"
default-features = false
features = ["unstable"]

[profile]
[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"

[profile.test.package.'*']
codegen-units = 1
opt-level = 1
